# cadmium

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md
.github/workflows/: mirror.yaml  rust-ci.yml
api/: openapi.yaml
deploy/: template.yaml
deploy/aws/: buildspec.yaml  template.yaml
src/: env.rs  handlers.rs  init.rs  lambda.rs  main.rs  routes.rs  shared.rs
src/shared/: core.rs  db.rs
src/shared/core/: errors.rs  http.rs  layers.rs
src/shared/models/: todo.rs  user.rs
