[package]
name = "cadmium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = 3


[dependencies]
axum = "0.7.4"
http-body-util = "0.1.0"
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "net",
    "tracing",
] }
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.5.1", features = [
    "trace",
    "timeout",
    "catch-panic",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
