[package]
name = "cadmium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/lambda.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = 3


[dependencies]
axum = "0.7.4"
http-body-util = "0.1.0"
lambda_http = "0.10.0"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "net",
] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
    "trace",
    "timeout",
    "catch-panic",
    "sensitive-headers",
    "cors",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4"] }
